--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ body{
      color: #333;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif; 
+    padding: 3px;
 }
 
 .container{
