--- a/css/style.css
+++ b/css/style.css
@@ -17,3 +17,11 @@ body{
 .container h1{
     font-size:  20px;
 }
+
+.cabecera{
+    background: #33a;
+    color: white;
+    margin: 0;
+    padding: 0.5em;
+
+}
