--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body{
      color: #333;
     text-align: center;
-    font-family:  Courier, monospace, Helvetica, sans-serif; 
+    font-family:  Arial, Helvetica, sans-serif, monospace, Helvetica, sans-serif; 
     padding: 3px;
 }
 
